k8s/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: is-phpmyadmin
  namespace: is-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: is-phpmyadmin
  template:
    metadata:
      labels:
        app: is-phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
