k8s/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: is-phpmyadmin
  namespace: is-app
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
  selector:
    app: is-phpmyadmin
