k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: is-app-ingress
  namespace: is-app
spec:
  rules:
    - host: adiapi.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
    - host: adidebil.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: adibaza.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: is-phpmyadmin
                port:
                  number: 80
